Fix edit button colors in dark mode

--- a/styles/_font.scss
+++ b/styles/_font.scss
@@ -167,7 +167,6 @@ p {
 .lang-ja {
   font-family: 'Work Sans', 'Noto Sans JP', sans-serif;
   h1, h2, h3, h4, h5,
-  .github-edit-wrap .github-edit,
   .navbar .navbar-nav .nav-link,
   article .children-display li a,
   .right-sidebar .level-1 a,
